fix navbar spacing

--- a/src/components/css/NavBar.css
+++ b/src/components/css/NavBar.css
@@ -7,6 +7,7 @@
   background-color: #008AD8;
   color: white;
   padding: 1em;
+  padding-left: 10px;
 }
 
 button {
